--- a/.env
+++ b/.env
@@ -7,3 +7,6 @@ SECRET_CODE=08789136782
 CLOUDINARY_CLOUD_NAME=dzcmgyrpl
 CLOUDINARY_API_KEY=269231581345278
 CLOUDINARY_API_SECRET=WPCgeujQXUvriQJ8xgIt3iRCwfQ
+ADMIN_EMAIL=ahmaddeveloper122@gmail.com
+mongodb+srv://niazisahb458:iloveyou123@seo.4zx60.mongodb.net/?retryWrites=true&w=majority&appName=Seo
+WEBSITE_URL=http://localhost:5173/
