--- a/.env
+++ b/.env
@@ -4,9 +4,9 @@ MONGO_DB_URL="mongodb+srv://niazisahb458:iloveyou123@seo.4zx60.mongodb.net/?retr
 EMAIL_USER=swap.socialpress@gmail.com
 EMAIL_PASS=qwnx igpi viqa hsyi
 SECRET_CODE=08789136782
-CLOUDINARY_CLOUD_NAME=dea79noiu
-CLOUDINARY_API_KEY=583466174328945
-CLOUDINARY_API_SECRET=UJ5tOd6gUxaLCAwOYuswGkL_N4k
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
 ADMIN_EMAIL=swap.socialpress@gmail.com
 WEBSITE_URL=https://socialpress.online
 STRIPE_WEBHOOK_SECRET=whsec_Q2x4JTwxnjnoCaPI6pwHCeNXtoBhmKWI
